--- a/project/src/root/layout.jade
+++ b/project/src/root/layout.jade
@@ -13,15 +13,16 @@ html(ng-app="kmptoolApp" ng-cloak )
 
 
         // Load fonts as quickly as possible
-        link(rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat:400,700' type='text/css')
+        // link(rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat:400,700' type='text/css')
         //- link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' type='text/css')
-        link(rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway:400,700' type='text/css')
+        // link(rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway:400,700' type='text/css')
 
 
         link(rel="shortcut icon" href="/images/eyethereal.ico")
 
         // Styling before scripting to reduce unstyled content time
-        link(rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.3.2/semantic.min.css')
+        // link(rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.3.2/semantic.min.css')
+        link(rel='stylesheet' href='semantic/semantic.min.css')
         link(rel='stylesheet' href='css/kmptool.css')
 
         // Now it's time for analytics and/or monitoring to get loaded
@@ -48,7 +49,8 @@ html(ng-app="kmptoolApp" ng-cloak )
         script(src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-animate.min.js")
         script(src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-sanitize.min.js")
         
-        script(src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.3.2/semantic.min.js")
+        //script(src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.3.2/semantic.min.js")
+        script(src="semantic/semantic.min.js")
         script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js")
 
         script(src="js/kmptool.js")
